Starting eureka server

--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8081
+#Indicates registration of client with eureka server
+eureka.client.register-with-eureka=false
+#Indicates weather this client should fetch client registry from Eureka server
+eureka.client.fetch-registry=false
