--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=8081
 #Indicates registration of client with eureka server
+#(false because the application itself is a eureka server)
 eureka.client.register-with-eureka=false
-#Indicates weather this client should fetch client registry from Eureka server
+#Indicates whether this client should fetch client registry from Eureka server
 eureka.client.fetch-registry=false
+#fallback value that provides the service URL for any client
+#that does not express a preference (in other words, it is a useful default)
+eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
