--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8082
+spring.application.name=user-app
+#fallback value that provides the service URL for any client
+#that does not express a preference (in other words, it is a useful default)
+eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
