Manually configuring API gateway routes

--- a/spring-cloud-api-gateway/src/main/resources/application.properties
+++ b/spring-cloud-api-gateway/src/main/resources/application.properties
@@ -5,4 +5,13 @@ spring.application.name=spring-cloud-api-gateway
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
 
 #Enables Discovery client gateway integration
-spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.enabled=true
+
+spring.cloud.gateway.routes[0].id=user-service
+#here lb stands for loadbalancer and user-app is the application name of microservice
+spring.cloud.gateway.routes[0].uri=lb://user-app
+#To match the http request with given parameters. (Similar to Java Predicates)
+spring.cloud.gateway.routes[0].predicates[0]=Path=/users
+spring.cloud.gateway.routes[0].predicates[1]=Method=GET,POST,PUT
+#RemoveRequestHeader it is a built in filter, but custom filter can be used
+spring.cloud.gateway.routes[0].filters[0]=RemoveRequestHeader=Cookie
