--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -1,7 +1,18 @@
-server.port=0
+server.port=8082
 spring.application.name=user-app
 #fallback value that provides the service URL for any client
 #that does not express a preference (in other words, it is a useful default)
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
 #Used for registering different instances of the same application with Eureka server
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+# H2 Database
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:dcbapp
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.generate-unique-name=false
+spring.datasource.name=my-test-db
