--- a/user-app/pom.xml
+++ b/user-app/pom.xml
@@ -51,6 +51,12 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>2.7.3</version>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
 
 	</dependencies>
 
