--- a/spring-cloud-api-gateway/src/main/resources/application.properties
+++ b/spring-cloud-api-gateway/src/main/resources/application.properties
@@ -4,16 +4,18 @@ spring.application.name=spring-cloud-api-gateway
 #that does not express a preference (in other words, it is a useful default)
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
 
-#Enables Discovery client gateway integration
+#enables gateway routing for all the microservices, so the endpoints can be accessed via prepending the spring-application-name to the URL.
 spring.cloud.gateway.discovery.locator.enabled=true
+#Client application name is lower case in URL
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-spring.cloud.gateway.routes[0].id=user-service
+#spring.cloud.gateway.routes[0].id=user-service
 #here lb stands for loadbalancer and user-app is the application name of microservice
-spring.cloud.gateway.routes[0].uri=lb://user-app
+#spring.cloud.gateway.routes[0].uri=lb://user-app
 #To match the http request with given parameters. (Similar to Java Predicates)
-spring.cloud.gateway.routes[0].predicates[0]=Path=/something
-spring.cloud.gateway.routes[0].predicates[1]=Method=GET,POST,PUT
+#spring.cloud.gateway.routes[0].predicates[0]=Path=/something
+#spring.cloud.gateway.routes[0].predicates[1]=Method=GET,POST,PUT
 #RemoveRequestHeader it is a built-in filter, but custom filter can be used
-spring.cloud.gateway.routes[0].filters[0]=RemoveRequestHeader=Cookie
+#spring.cloud.gateway.routes[0].filters[0]=RemoveRequestHeader=Cookie
 #To rewrite the path
-spring.cloud.gateway.routes[0].filters[1]=RewritePath=/something, /users
+#spring.cloud.gateway.routes[0].filters[1]=RewritePath=/something, /users
