Config server with file system backend (no-git)

--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.application.name=config-server
+server.port=8085
 
+spring.profiles.active=native
+
+#Config files location
+spring.cloud.config.server.native.search-locations=file:/D:/personal-git/Spring-Microservices-Learning/config-files/
+#To check hit http://localhost:<<config-server-port>>/<<config-server-name>>/<<spring-profile-name>>
