--- a/spring-cloud-api-gateway/src/main/resources/application.properties
+++ b/spring-cloud-api-gateway/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.cloud.gateway.discovery.locator.enabled=true
 #Client application name is lower case in URL
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-jwt.secret=somethingforjwttokentosignthistokenwith
-
+spring.config.import=optional:configserver:http://localhost:8085
+spring.profiles.active=native
 #spring.cloud.gateway.routes[0].id=user-service
 #here lb stands for loadbalancer and user-app is the application name of microservice
 #spring.cloud.gateway.routes[0].uri=lb://user-app
