--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.generate-unique-name=false
 spring.datasource.name=my-test-db
 spring.h2.console.settings.web-allow-others=true
+
+spring.config.import=optional:configserver:http://localhost:8085
