--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.datasource.name=my-test-db
 spring.h2.console.settings.web-allow-others=true
 
 spring.config.import=optional:configserver:http://localhost:8085
+
+logging.level.com.akhilesh.userapp.config.AlbumAppClient=DEBUG
