--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.h2.console.settings.web-allow-others=true
 
 spring.config.import=optional:configserver:http://localhost:8085
 
-logging.level.com.akhilesh.userapp.config.AlbumAppClient=DEBUG
+logging.level.com.akhilesh.userapp.feignclientconfig.AlbumAppClient=DEBUG
