--- a/user-app/pom.xml
+++ b/user-app/pom.xml
@@ -71,7 +71,20 @@
 			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
 			<version>2.2.10.RELEASE</version>
 		</dependency>-->
-		
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-spring-boot2</artifactId>
+			<version>1.7.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
