--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.config.import=optional:configserver:http://localhost:8085
 
 logging.level.com.akhilesh.userapp.feignclientconfig.AlbumAppClient=DEBUG
 #feign.circuitbreaker.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.enabled=true
+management.health.circuitbreakers.enabled=true
