Circuit breaker using Resilience4j

--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -25,3 +25,11 @@ logging.level.com.akhilesh.userapp.feignclientconfig.AlbumAppClient=DEBUG
 management.endpoints.web.exposure.include=*
 management.endpoint.health.enabled=true
 management.health.circuitbreakers.enabled=true
+
+resilience4j.circuitbreaker.instances.ALBUM-APP.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.ALBUM-APP.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.ALBUM-APP.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.ALBUM-APP.sliding-window-type=COUNT_BASED
+resilience4j.circuitbreaker.instances.ALBUM-APP.sliding-window-size=2
+resilience4j.circuitbreaker.instances.ALBUM-APP.minimum-number-of-calls=10
+resilience4j.circuitbreaker.instances.ALBUM-APP.event-consumer-buffer-size=15
