Retry using Resilence4j

--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -26,6 +26,7 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.enabled=true
 management.health.circuitbreakers.enabled=true
 
+resilience4j.circuitbreaker.circuit-breaker-aspect-order=1
 resilience4j.circuitbreaker.instances.ALBUM-APP.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.ALBUM-APP.automatic-transition-from-open-to-half-open-enabled=true
 resilience4j.circuitbreaker.instances.ALBUM-APP.wait-duration-in-open-state=10s
@@ -33,3 +34,8 @@ resilience4j.circuitbreaker.instances.ALBUM-APP.sliding-window-type=COUNT_BASED
 resilience4j.circuitbreaker.instances.ALBUM-APP.sliding-window-size=2
 resilience4j.circuitbreaker.instances.ALBUM-APP.minimum-number-of-calls=10
 resilience4j.circuitbreaker.instances.ALBUM-APP.event-consumer-buffer-size=15
+
+#Higher priority == higher number
+resilience4j.retry.retry-aspect-order=2
+resilience4j.retry.instances.ALBUM-APP.max-attempts=5
+resilience4j.retry.instances.ALBUM-APP.wait-duration=2s
