Logging added for user and album service

--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -39,3 +39,5 @@ resilience4j.circuitbreaker.instances.ALBUM-APP.event-consumer-buffer-size=15
 resilience4j.retry.retry-aspect-order=2
 resilience4j.retry.instances.ALBUM-APP.max-attempts=5
 resilience4j.retry.instances.ALBUM-APP.wait-duration=2s
+
+logging.file.name=D:/logs/user-app.log
