--- a/album-app/src/main/resources/application.properties
+++ b/album-app/src/main/resources/application.properties
@@ -6,3 +6,5 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 
 spring.devtools.restart.enabled = true
 
+logging.file.name=D:/logs/album-app.log
+
