Adding spring security to discovery service

--- a/album-app/src/main/resources/application.properties
+++ b/album-app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8086
 spring.application.name=album-app
 
-eureka.client.serviceUrl.defaultZone = http://localhost:8081/eureka/
+eureka.client.serviceUrl.defaultZone = http://user:password@localhost:8081/eureka/
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 spring.devtools.restart.enabled = true
