--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -7,3 +7,6 @@ eureka.client.fetch-registry=false
 #fallback value that provides the service URL for any client
 #that does not express a preference (in other words, it is a useful default)
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
+
+spring.security.user.name=user
+spring.security.user.password=password
