--- a/spring-cloud-api-gateway/src/main/resources/application.properties
+++ b/spring-cloud-api-gateway/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8084
 spring.application.name=spring-cloud-api-gateway
 #fallback value that provides the service URL for any client
 #that does not express a preference (in other words, it is a useful default)
-eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
+eureka.client.service-url.defaultZone=http://user:password@localhost:8081/eureka/
 
 #enables gateway routing for all the microservices, so the endpoints can be accessed via prepending the spring-application-name to the URL.
 spring.cloud.gateway.discovery.locator.enabled=true
