--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8082
 spring.application.name=user-app
 #fallback value that provides the service URL for any client
 #that does not express a preference (in other words, it is a useful default)
-eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
+eureka.client.service-url.defaultZone=http://user:password@localhost:8081/eureka/
 #Used for registering different instances of the same application with Eureka server
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
