--- a/kafka-producer-wikimedia/pom.xml
+++ b/kafka-producer-wikimedia/pom.xml
@@ -28,5 +28,17 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.32</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.10.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.launchdarkly</groupId>
+            <artifactId>okhttp-eventsource</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+
     </dependencies>
 </project>
